--- a/views/index.html
+++ b/views/index.html
@@ -373,8 +373,6 @@
       </div> -->
    </section>
 
-   <section id="settingUp"></section>
-
    <!-------------------------------------------------------------------------->
 
    <!-- Masks & Covers -->
@@ -383,6 +381,12 @@
    </div>
 
    <div id="won"></div>
+
+   <div class="d-flex flex-column justify-content-center gap-3 text-center" id="settingUp">
+      <i class="fa-solid fa-otter fa-spin"></i>
+      <span>Setting up your game board ...</span>
+      <span>Please wait ...</span>
+   </div>
 
 
 </div>   <!-- End outer-most container -->
