--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -300,13 +300,17 @@ input[type='password'] {
    width: 90vw;
    margin: auto;
 
-   justify-content: center;
+   justify-content: space-evenly;
 }
 
 #gamePaneOuterBorder {
    border: 3px solid var(--bs-success-bg-subtle);
    border-radius: calc(var(--bs-border-radius) + 0.15rem);
-   box-shadow: 1px 1px 3px lightgray;
+   box-shadow: 1px 1px 2px lightgray;
+}
+
+#score, #time {
+   color: var(--bs-success-text-emphasis);
 }
 
 #gamePaneGrid {
@@ -351,7 +355,7 @@ input[type='password'] {
 #gamePaneGrid .active {
    border: .5px solid var(--bs-success-border-subtle) !important;
    background-color: var(--bs-success-bg-subtle) !important;
-   color: var(--bs-success-text-emphasis);
+   color: var(--success-link);
    font-weight: 500;
 }
 
@@ -362,6 +366,62 @@ input[type='password'] {
 
 #stepInfo {
    font-size: small;
+}
+
+#numberPanel {
+   width: 100%;
+   border-top: 1px solid var(--bs-secondary);
+}
+
+#numberPanel button {
+   width: 100%;
+   aspect-ratio: 1 / 1.3;
+   color: var(--bs-secondary);
+   border-radius: 0;
+   font-size: large;
+}
+
+#numberPanel button:hover {
+   background-color: var(--sub-active);
+}
+
+#numberPanel button.active {
+   background-color: var(--bs-success-bg-subtle);
+   border: none;
+   border-top: 3px solid var(--bs-success);
+   color: var(--success-link);
+   font-weight: 500;
+   box-shadow: 1px 1px 2px lightgray;
+   transform: translateY(-1px);
+}
+
+#gameTools button {
+   width: 100%;
+   color: var(--bs-secondary);
+}
+
+#penSwitch {
+   border-bottom: 1px solid var(--bs-secondary);
+}
+
+#penSwitch button {
+   border-color: transparent;
+   border-radius: 0;
+   font-size: large;
+}
+
+#penSwitch button.active {
+   background-color: var(--bs-success-bg-subtle);
+   border: none;
+   border-bottom: 2px solid var(--bs-success);
+   color: var(--success-link);
+   font-weight: 500;
+   box-shadow: 1px 1px 2px lightgray;
+   transform: translateY(1px);
+}
+
+#revertLastStep i, #hint i {
+   font-size: 1.5em;
 }
 
 
