--- a/views/index.html
+++ b/views/index.html
@@ -179,20 +179,20 @@
             </div>
 
             <div class="d-flex flex-column align-items-center text-center gap-3">
-               <div class="row justify-content-center" id="numberPanel">
+               <div class="row justify-content-evenly" id="numberPanel">
                   <!-- Numbers appended by JS -->
                </div>
 
-               <div class="row align-items-end" id="gameTools">
-                  <div class="col-3 col-lg-6">
-                     <button class="btn text-secondary" id="revertLastStep"><i class="fa-solid fa-rotate-left"></i></button>
+               <div class="row align-items-end w-100" id="gameTools">
+                  <div class="col-2 col-lg-6">
+                     <button class="btn" id="revertLastStep"><i class="fa-solid fa-rotate-left"></i></button>
                   </div>
-                  <div class="col-6 col-lg-12 order-lg-first d-flex flex-row" id="penSwitch">
+                  <div class="col-8 col-lg-12 order-lg-first d-flex flex-row justify-content-center p-0" id="penSwitch">
                      <button class="btn active"><i class="fa-solid fa-pencil"></i>&ensp;Pencil</button>
                      <button class="btn"><i class="fa-solid fa-pen-nib"></i>&ensp;Pen</button>
                   </div>
-                  <div class="col-3 col-lg-6">
-                     <button class="btn text-secondary" id="hint"><i class="fa-regular fa-lightbulb"></i></button>
+                  <div class="col-2 col-lg-6">
+                     <button class="btn" id="hint"><i class="fa-regular fa-lightbulb"></i></button>
                   </div>
                </div>
             </div>
