Adjusted the styling for game tools buttons & layout for medium screen size (990px)

--- a/views/index.html
+++ b/views/index.html
@@ -178,12 +178,12 @@
                </div>
             </div>
 
-            <div class="d-flex flex-column align-items-center text-center gap-3">
+            <div class="d-flex flex-column align-items-center text-center gap-4">
                <div class="row justify-content-evenly" id="numberPanel">
                   <!-- Numbers appended by JS -->
                </div>
 
-               <div class="row align-items-end w-100" id="gameTools">
+               <div class="row align-items-end justify-content-between w-100" id="gameTools">
                   <div class="col-2 col-lg-6">
                      <button class="btn" id="revertLastStep"><i class="fa-solid fa-rotate-left"></i></button>
                   </div>
