--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -299,6 +299,7 @@ input[type='password'] {
    flex-direction: column;
    width: 90vw;
    margin: auto;
+   padding-top: 1.2em;
 
    justify-content: space-evenly;
 }
@@ -376,6 +377,7 @@ input[type='password'] {
 #numberPanel button {
    width: 100%;
    aspect-ratio: 1 / 1.3;
+   max-height: 80px;
    color: var(--bs-secondary);
    border-radius: 0;
    font-size: large;
@@ -397,11 +399,13 @@ input[type='password'] {
 
 #gameTools button {
    width: 100%;
+   height: 2.7em;
    color: var(--bs-secondary);
 }
 
 #penSwitch {
    border-bottom: 1px solid var(--bs-secondary);
+   max-width: 350px;
 }
 
 #penSwitch button {
