--- a/views/index.html
+++ b/views/index.html
@@ -165,7 +165,7 @@
                <h6><i class="fa-regular fa-clock"></i>&ensp;Time: <span id="time">0:32:43</span></h6>
             </div>
 
-            <div id="gamePaneOuterBorder">
+            <div class="order-lg-first" id="gamePaneOuterBorder">
                <div class="card border-success">
                   <div class="card-header bg-success-subtle text-center h6">Level <span id="gameLevel">3 - 1</span></div>
                   <div class="card-body text-center d-flex flex-column align-items-center p-0" id="gamePaneGrid">
