--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -311,6 +311,10 @@ input[type='password'] {
    box-shadow: 1px 1px 2px lightgray;
 }
 
+#gamePaneOuterBorder + div {
+   align-items: center;
+}
+
 #score, #time {
    color: var(--bs-success-text-emphasis);
 }
@@ -429,6 +433,14 @@ input[type='password'] {
    font-size: 1.5em;
 }
 
+#scoreTime-sm {
+   display: flex !important;
+}
+
+#scoreTime-lg {
+   display: none !important;
+}
+
 
 
 /** Large screen size */
@@ -528,7 +540,85 @@ input[type='password'] {
    /** Game pane */
    #gamePane {
       flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 90%;
+      max-width: 1200px;
    }
+
+   #gamePaneOuterBorder {
+      flex-grow: 1;
+      height: fit-content;
+   }
+
+   #gamePaneOuterBorder + div {
+      height: 100%;
+      justify-content: space-evenly;
+   }
+
+   #gamePaneOuterBorder .card-header {
+      display: none;
+   }
+
+   #gamePane > div {
+      max-width: 70vh;
+   }
+
+   #scoreTime-sm {
+      display: none !important;
+   }
+
+   #scoreTime-lg {
+      display: flex !important;
+   }
+
+   #numberPanel {
+      border: .9px solid var(--bs-success-border-subtle);
+      border-radius: 3px;
+      box-shadow: .7px .7px 1.5px lightgray, -0.7px -0.7px 1.5px lightgray;
+   }
+
+   #numberPanel {
+      width: min-content;
+   }
+
+   #numberPanel > div > div {
+      width: min-content;
+   }
+
+   #numberPanel button {
+      border: 1px solid var(--bs-secondary-border-subtle);
+      border-collapse: collapse;
+      aspect-ratio: 1 / 1;
+      width: 4em;
+   }
+
+   #numberPanel button.active {
+      border: 2px solid var(--bs-success);
+      box-shadow: none;
+      transform: none;
+   }
+
+   #numberPanel > div:first-of-type > div button {
+      border-top: none;
+   }
+
+   #numberPanel > div:last-of-type > div button {
+      border-bottom: none;
+   }
+
+   #numberPanel > div > div:first-of-type button {
+      border-left: none;
+   }
+   
+   #numberPanel > div > div:last-of-type button {
+      border-right: none;
+   }
+
+   #gameTools {
+      row-gap: 1em;
+   }
+
 
 }
 
