Adjusted game pane section layout under xl screen size.

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -642,4 +642,9 @@ input[type='password'] {
    #settingUp {
       font-size: xx-large;
    }
+
+   /** Game Pane */
+   #gamePane {
+      max-width: 1400px;
+   }
 }
