Removed force display JS lines for testing purpose in previous branch

--- a/views/index.html
+++ b/views/index.html
@@ -437,7 +437,7 @@
 
 </body>
 
-<script> // TODO: Testing purpose only. Remove for normal step flow
+<!-- <script> // TODO: Testing purpose only. Remove for normal step flow
    setTimeout(() => {
       let sections = document.querySelectorAll('section');
       sections.forEach(section => {
@@ -447,6 +447,6 @@
       gamePane.setAttribute('style', 'display: flex !important');
    }, 5e2);
 
-</script>
+</script> -->
 
 </html>
