--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -320,7 +320,21 @@ input[type='password'] {
 }
 
 #gamePaneGrid {
+   position: relative;
    aspect-ratio: 1 / 1;    /** Square 9x9 pane */
+}
+
+#startGame {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+
+   background-color: var(--bs-white);
+   color: var(--bs-success);
+   font-size: large;
+   transition: all 0.2s;
 }
 
 .gamePaneRow {
