--- a/views/index.html
+++ b/views/index.html
@@ -170,6 +170,8 @@
                   <div class="card-header bg-success-subtle text-center h6">Level <span id="gameLevel">3 - 1</span></div>
                   <div class="card-body text-center d-flex flex-column align-items-center p-0" id="gamePaneGrid">
                      <!-- 9x9 grid appended by JS -->
+                     
+                     <button class="btn btn-link" id="startGame"><i class="fa-regular fa-circle-play">&ensp;</i>Click To Start</button>
                   </div>
                   <div class="card-footer" id="stepInfo">
                      <!-- Game operations fetched by JS will be appended here -->
@@ -437,7 +439,7 @@
 
 </body>
 
-<!-- <script> // TODO: Testing purpose only. Remove for normal step flow
+<script> // TODO: Testing purpose only. Remove for normal step flow
    setTimeout(() => {
       let sections = document.querySelectorAll('section');
       sections.forEach(section => {
@@ -447,6 +449,6 @@
       gamePane.setAttribute('style', 'display: flex !important');
    }, 5e2);
 
-</script> -->
+</script>
 
 </html>
