--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -457,6 +457,31 @@ input[type='password'] {
    display: none !important;
 }
 
+/** Pause * Won Masks */
+#paused {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: 100vh;
+   background-color: rgba(255, 255, 255, 0.9);
+   color: var(--bs-success-text-emphasis)
+}
+
+#pauseToggleWrapper {
+   width: 100%;
+   height: 100%;
+}
+
+#pauseToggleWrapper > i {
+   font-size: 4em;
+}
+
+#pauseToggleWrapper button {
+   margin-top: 20vh;
+   color: var(--bs-success);
+   font-size: 1.2em;
+}
 
 
 /** Large screen size */
