Finalized game pane to add a start game button for better user control. Implemented confirm redirect modal if the user switches between sections during a game. Adjusted size of paused mask for large screen sizes. Replaced individual game functions with built-in function of JS object.

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -459,13 +459,13 @@ input[type='password'] {
 
 /** Pause * Won Masks */
 #paused {
-   position: fixed;
+   position: absolute;
    top: 0;
-   left: 0;
+   right: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(255, 255, 255, 0.9);
-   color: var(--bs-success-text-emphasis)
+   color: var(--bs-success-text-emphasis);
 }
 
 #pauseToggleWrapper {
@@ -658,6 +658,14 @@ input[type='password'] {
 
    #gameTools {
       row-gap: 1em;
+   }
+
+   /** Paused & Won masks */
+   #paused {
+      top: 35px;
+      width: calc(100vw / 12 * 10 + 30px);  /** same width as contentBox */
+      height: calc(100vh - 35px);
+      background-color: rgba(248, 249, 250, 0.9);
    }
 
 
