--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -187,6 +187,12 @@ input[type='password'] {
    margin: 0 auto;
 }
 
+#entry button {
+   max-width: 275px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 #entry span {
    font-size: small;
 }
