--- a/views/index.html
+++ b/views/index.html
@@ -284,7 +284,7 @@
                <div class="d-flex flex-column align-items-center gap-3" id="searchBar">
                   <label class="h3" for="searchUsername"><i class="fa-solid fa-magnifying-glass"></i>&ensp;Search For
                      User</label>
-                  <input type="text" name="searchUsername" class="border border-dark-subtle rounded"
+                  <input id="searchUsername" type="text" name="searchUsername" class="border border-dark-subtle rounded"
                      placeholder="Enter username">
                </div>
 
