--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -362,6 +362,14 @@ input[type='password'] {
    border-right: .5px solid var(--bs-secondary-border-subtle);
 }
 
+#gamePaneGrid .gamePaneCol .correct  {
+   color: blue;
+}
+
+#gamePaneGrid .gamePaneCol .incorrect {
+   color: red;
+}
+
 .gamePaneCol:nth-of-type(3n) {
    border-right: .5px solid var(--bs-secondary);
 }
