Added rememberme and changed the default page to daily sudoku temporarily

--- a/views/index.html
+++ b/views/index.html
@@ -387,7 +387,7 @@
 
             <div class="row gy-3 mt-4">
                <div class="col-6 text-start">
-                  <input type="checkbox">&ensp;Remember Me
+                  <input id="rememberme" type="checkbox">&ensp;Remember Me
                </div>
                <div class="col-6 text-end">
                   <a href="#">Forgot Password</a>
