Implemented game timer

--- a/views/index.html
+++ b/views/index.html
@@ -187,8 +187,8 @@
 
             <section class="flex-grow-1 d-flex gap-4" id="gamePane">
                <div class="d-flex flex-column text-center gap-2" id="scoreTime-sm">
-                  <h5><i class="fa-solid fa-award"></i>&ensp;Score: <span id="score">123456</span></h5>
-                  <h6><i class="fa-regular fa-clock"></i>&ensp;Time: <span id="time">0:32:43</span></h6>
+                  <h5><i class="fa-solid fa-award"></i>&ensp;Score: <span class="score">0</span></h5>
+                  <h6><i class="fa-regular fa-clock"></i>&ensp;Time: <span class="time">00:00:00</span></h6>
                </div> <!-- Will be hidden for lg screen size -->
 
                <div class="order-lg-first" id="gamePaneOuterBorder">
@@ -209,8 +209,8 @@
 
                <div class="d-flex flex-column text-center gap-4">
                   <div class="d-flex flex-column text-center gap-2" id="scoreTime-lg">
-                     <h5><i class="fa-solid fa-medal"></i>&ensp;Score: <span id="score">123456</span></h5>
-                     <h6><i class="fa-regular fa-clock"></i>&ensp;Time: <span id="time">0:32:43</span></h6>
+                     <h5><i class="fa-solid fa-medal"></i>&ensp;Score: <span class="score">0</span></h5>
+                     <h6><i class="fa-regular fa-clock"></i>&ensp;Time: <span class="time">00:00:00</span></h6>
                   </div>
 
                   <div class="row justify-content-evenly" id="numberPanel">
@@ -457,8 +457,8 @@
       <div class="collapse text-center z-4" id="won">
          <div class="d-flex flex-column justify-content-center gap-5" id="wonToggleWrapper">
             <h1><i class="fa-solid fa-trophy text-warning">&ensp;</i>Congratulations!</h1>
-            <h4>Score: <span id="wonScore">123456</span></h4>
-            <h4>Time: <span id="wonTime">1:23:45</span></h4>
+            <h4>Score: <span class="score">0</span></h4>
+            <h4>Time: <span class="time">00:00:00</span></h4>
 
             <div class="d-flex justify-content-evenly gap-5">
                <button class="btn btn-link" id="wonToDashboard">
