Implemented for input validation for login form, and error message display for required input field and username & password do not match

--- a/views/index.html
+++ b/views/index.html
@@ -382,7 +382,7 @@
                <label for="password" class="mt-2 fw-normal">Password</label>
                <input id="login-password" type="password" name="password" class="border border-dark-subtle rounded"
                   placeholder="Enter your password">
-               <span class="text-danger" id="loginErr">${error msg}</span>
+               <span class="text-danger" id="loginErr"></span>
             </div>
 
             <div class="row gy-3 mt-4">
