Minor adjustments to disallow non-admin users from seeing the section link to admin panel.

--- a/views/index.html
+++ b/views/index.html
@@ -130,7 +130,7 @@
                         </button>
                      </li>
                      <li class="nav-item w-100 text-center">
-                        <a class="nav-link sectionLink text-decoration-underline">Admin Panel</a>
+                        <a class="nav-link sectionLink text-decoration-underline" id="toAdmin">Admin Panel</a>
                      </li>
                   </ul>
                </div>
