Fixed issue which cause game statistical data to not shown correctly on dashboard. Display search result user data in the result card container

--- a/views/index.html
+++ b/views/index.html
@@ -291,15 +291,15 @@
                <div class="collapse" id="searchResult">
                   <!-- collapse wrapper to prevent jumpy collapse animation -->
                   <div class="card">
-                     <div class="card-header h4">${username}</div>
+                     <div class="card-header h4" id="resultUsername">${username}</div>
 
                      <div class="card-body">
-                        <div class="card-title fw-bold">
+                        <div class="card-title fw-bold" id="resultRole">
                            Role: Member<br>
                            Last logged in: March 19th, 2024
                         </div>
 
-                        <div class="card-text fs-small">
+                        <div class="card-text fs-small" id="resultOthers">
                            Registered since: March 19th, 2024<br>
                            Highest score: 123456<br>
                            Levels passed: 88<br>
