Changed color for correct/incorrect input on game pane

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -363,11 +363,11 @@ input[type='password'] {
 }
 
 #gamePaneGrid .gamePaneCol .correct  {
-   color: blue;
+   color: var(--success-highlight);
 }
 
 #gamePaneGrid .gamePaneCol .incorrect {
-   color: red;
+   color: var(--bs-danger);
 }
 
 .gamePaneCol:nth-of-type(3n) {
