Fixed timer issue when game is paused & continued. Set a time for redirecting to entry page when a guest has completed a game.

--- a/views/index.html
+++ b/views/index.html
@@ -448,7 +448,7 @@
             <i class="fa-solid fa-pause"></i>
             <h1>Your Game Has Paused</h1>
             <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#paused" aria-controls="paused"
-               aria-expanded="false" aria-label="Continue Playing">
+               aria-expanded="false" aria-label="Continue Playing" id="continuePlaying">
                <i class="fa-regular fa-circle-play">&ensp;</i>Continue
             </button>
          </div>
