Implemented navbar brand content change when switching sections. Implemented card title text change when doring different levels.

--- a/views/index.html
+++ b/views/index.html
@@ -193,7 +193,7 @@
 
                <div class="order-lg-first" id="gamePaneOuterBorder">
                   <div class="card border-success">
-                     <div class="card-header bg-success-subtle text-center h6">Level <span id="gameLevel">3 - 1</span>
+                     <div class="card-header bg-success-subtle text-center h6"><span id="gameLevel">Level&ensp;3 - 1</span>
                      </div>
                      <div class="card-body text-center d-flex flex-column align-items-center p-0" id="gamePaneGrid">
 
