Also implemented section name change under different sections for large screen size and up

--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
          <div class="col-2 username">
             ${username}
          </div>
-         <div class="col-10">
+         <div class="col-10 sectionName">
             <i class="fa-solid fa-otter"></i>&nbsp;
             Hello! Sudoku!
          </div>
@@ -87,7 +87,7 @@
          <!-- Navbar -->
          <div class="col-lg-2 col-md-12 pe-0">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <span class="navbar-brand">
+               <span class="navbar-brand sectionName">
                   <!-- TODO: Switch navbar brand when switching between sections -->
                   <i class="fa-solid fa-gauge-high"></i>&nbsp;
                   My Dashboard
